doc/rtf/genai_history.txt
=version 2=
=========
use postgreSQL instead of SQLite

========
ModuleNotFoundError: No module named 'psycopg2'

========
add console DB connected if connected.

========

Db failed.

name: postgres
host name/address: localhost
port: 5432
database: postgres
username: postgres
password: postgres

========

move everything from SQLite to PostgreSQL.
all data should store in PostgreSQL includes user, tags, images
And remove SQLite.


========

still something not working. old created files remained. everything should be real working with postgreSQL database.

there are no users in database user table. but login is working . this is wrong. fix.


========

you are really bad. all data should retrived from postgresql://postgres:postgres@localhost:5432/postgres.

But you are getting data from somewhere. fix it.

========
generate docker file

========

after docker run. login & register is not working. got internal server error. fix it.

========

Error uploading image: (psycopg2.errors.UniqueViolation) duplicate key value violates unique constraint "image_tags_pkey" DETAIL: Key (image_id, tag_id)=(1, 1) already exists. [SQL: INSERT INTO image_tags (image_id, tag_id) VALUES (%(image_id)s, %(tag_id)s)] [parameters: {'image_id': 1, 'tag_id': 1}] (Background on this error at: https://sqlalche.me/e/20/gkpj)

========

WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.


* Running on http://127.0.0.1:5000⁠

not running after docker run. fix it.

========

Images should be stored in AWS S3 and accessed using IAM role of the application (pre-signed URLs). configure it


=============

well done, but insert you generated code to my project directly

=============


Create an S3 bucket in my AWS account, name is winston-flask-q


=============

  File "F:\image_gallery\app.py", line 276
    if tag_name:name:
                     ^
SyntaxError: invalid syntax